made it a shorter internal link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </tr>
             <tr>
                 <td>Base Stylesheet</td>
-                <td><a href="https://cc.sean-outram.dev/css/main.css">https://cc.sean-outram.dev/css/main.css</a></td>
+                <td><a href="/css/main.css">https://cc.sean-outram.dev/css/main.css</a></td>
             </tr>
         </table>
     </body>
