added the favicon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 <td>Base Stylesheet</td>
                 <td><a href="/css/main.css">https://cc.sean-outram.dev/css/main.css</a></td>
             </tr>
+            <tr>
+                <td>Base Icon</td>
+                <td><a href="/images/favicon.png"></a></td>
+            </tr>
         </table>
     </body>
 </html>
