--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Common Code</title>
+        <link rel="icon" href="/images/favicon.png">
     </head>
     <body>
         <header>
