added the link to the favicon entry

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td>Base Icon</td>
-                <td><a href="/images/favicon.png"></a></td>
+                <td><a href="/images/favicon.png">https://cc.sean-outram.dev/images/favicon.png</a></td>
             </tr>
         </table>
     </body>
